# ROUTED

./: .gitignore  .gitlab-ci.yml  .prettierrc.yaml  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.postgis  README.md  pyproject.toml
backend/data/: tourist_destinations.json  trips.json  users.json
backend/src/backend/: main.py  metrics.py  run.py
backend/src/backend/api_models/: location.py  match.py  tag.py  token.py  trip.py  user.py
backend/src/backend/auth/: __init__.py  jwt.py
backend/src/backend/config/: db.py  env_vars.py  limiter.py  redis.py
backend/src/backend/graph/: __init__.py  entity_resolver.py  graph_client.py  graph_embedder.py  knowledge_graph.py
backend/src/backend/loggers/: logger.py
backend/src/backend/models/: Base.py  Tags.py  associations.py  interest.py  location.py  match.py  tag.py  trip.py  user.py  users.py
backend/src/backend/routes/: interest.py  location.py  places.py
backend/src/backend/routes/match/: __init__.py  match.py
backend/src/backend/routes/trip/: trip.py
backend/src/backend/scripts/: calculate_all_matches.py  guidance.md  reset_and_seed.py  seed_destinations.py  seed_dummy_trips.py  seed_trips.py  seed_users.py
backend/src/backend/services/: MATCHING_EXTENSIBILITY.md  README.md  match_service.py
backend/src/backend/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_graph_scoring.py  test_health.py  test_jwt_auth.py  test_location_routes.py  test_match_api.py  test_models.py  test_trip_routes.py  test_user_routes.py
env/: README.md  warn  (+3 more)
(+109 files in other folders)
