[project]
name = "backend"
version = "0.1.0"
description = "Routed backend API with OpenAPI documentation"
authors = [{ name = "Hemaang Sood", email = "hemaangsood@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"fastapi (>=0.128.0,<0.129.0)",
	"uvicorn (>=0.40.0,<0.41.0)",
	"pytest (>=9.0.2,<10.0.0)",
	"httpx (>=0.28.1,<0.29.0)",
	"psycopg[binary] (>=3.3.2,<4.0.0)",
	"pydantic[email] (>=2.12.5,<3.0.0)",
	"sqlalchemy (>=2.0.46,<3.0.0)",
	"python-dotenv (>=1.0.0,<2.0.0)",
	"geoalchemy2[shapely] (>=0.18.1,<0.19.0)",
	"python-jose[cryptography] (>=3.5.0,<4.0.0)",
	"python-multipart (>=0.0.22,<0.0.23)",
	"rich (>=14.3.2,<15.0.0)",
]

[tool.poetry]
packages = [{ include = "backend", from = "src" }]

[tool.poetry.scripts]
dev = "backend.run:dev"
test = "pytest:main"
resetDB = "backend.run:deleteRowsAndRemakeTables"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
